<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/DarkGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <!-- Go back button -->
        <ImageButton
            android:id="@+id/toolbarBackButton"
            style="@style/IconButton"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/description_back_button"/>

        <!-- Title -->
        <TextView
            android:id="@+id/toolbarTitle"
            style="@style/LargeText.LightGrey"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:gravity="center_vertical"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>