<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/button_light_green">

    <!-- Container -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical">

        <!-- Friend Username -->
        <TextView
            android:id="@+id/friend_username"
            style="@style/StandardText.DarkGreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>