...

    <!-- Toolbar -->
    <include layout="@layout/toolbar"/>

    <!-- Remove Friend Button -->
    <ImageButton
        android:id="@+id/removeFriendButton"
        style="@style/IconButton"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_remove_friend_button"
...
