...
    <string name='insert_friend_button'>Insert here</string>
    <string name='submit_friend_button'>Add</string>
    <string name='add_current_username'>You can\'t add yourself to your friends!</string>
    <string name='friend_already_added'>The user is already your friend.</string>
    <string name='friend_not_present_db'>The user does not exists.</string>
    <string name='friend_added'>is now your friend!</string>
    <string name="friend_removed">is no longer your friend.</string>


    <!-- RANKINGS HEADER -->
    <string name="header_position" translatable="false">Pos</string>
    <string name="header_username">Username</string>
    <string name="header_points">Points</string>
...
